--- a/project-linreg-no-knn_tan_wanjing.ipynb
+++ b/project-linreg-no-knn_tan_wanjing.ipynb
@@ -930,7 +930,7 @@
     "# Feature selection\n",
     "# create feature matix (x_selected)\n",
     "# use np.c_ to select attributes/features/independent variables\n",
-    "# LSTAT, RM and DIS and assign them as X，\n",
+    "# LSTAT, RM and PTRATIO and assign them as X，\n",
     "# assign dependent variable MEDV as Y：\n",
     "\n",
     "X = pd.DataFrame(np.c_[df_boston['LSTAT'], df_boston['RM'], df_boston['PTRATIO']], columns = ['LSTAT','RM','PTRATIO'])\n",
